objects/Account_Team_Member__c.object
<CustomObject>
    <description>Used to track which Royall Resources are assigned to an account.</description>
    <fields>
        <fullName>Account_Status_HD__c</fullName>
        <formula>Account__r.r_hd_current_year_account_status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status (HD)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status_Royall__c</fullName>
        <formula>Account__r.r_Current_Year_Account_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status (Royall)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Royall_Resource__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Royall Resource</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Royall_Resource__r.Work_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Royall_Resource_Name__c</fullName>
        <description>Users with the Royall - App Subscription permission set need to see the Royall Resource name, but cannot see the Royall Resource lookup field because they don&apos;t have access to the Royall Resource Object.  App Subscription license types are limited in the number of custom objects they can access, so we are using this field as a workaround to avoid granting them access to another custom object.</description>
        <formula>HYPERLINK( &quot;/&quot; &amp; Royall_Resource__r.Id , Royall_Resource__r.Name)</formula>
        <label>Royall Resource Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Royall_Resource_Role__c</fullName>
        <formula>TEXT( Royall_Resource__r.Role__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Royall Resource Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Royall_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Royall Resource</label>
        <referenceTo>Royall_Resource__c</referenceTo>
        <relationshipName>Account_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Royall Account Team Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Status_HD__c</columns>
        <columns>Account_Status_Royall__c</columns>
        <columns>Royall_Resource_Name__c</columns>
        <columns>Royall_Resource_Role__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Show_me_the_H_D_Financial_Aid_teams</fullName>
        <columns>Account__c</columns>
        <columns>Royall_Resource__c</columns>
        <columns>Royall_Resource_Role__c</columns>
        <columns>NAME</columns>
        <columns>Account_Status_HD__c</columns>
        <columns>Account_Status_Royall__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Royall_Resource_Role__c</field>
            <operation>contains</operation>
            <value>aid,principal</value>
        </filters>
        <label>HD Account Team Allocations</label>
    </listViews>
    <listViews>
        <fullName>Team_Assignments</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Royall_Resource__c</columns>
        <columns>Royall_Resource_Role__c</columns>
        <filterScope>Everything</filterScope>
        <label>Team Assignments</label>
    </listViews>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>Account Team Identity</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Royall Account Team Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>